--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.2",
+    "helmet": "^6.0.0",
     "mongoose": "^6.5.3"
   }
 }
